test/good/basic/decl02.px

if true do
    Bool x
    x = false
    print x

if true do
    Char x
    x = '*'
    print x
