test/bad/basic/init03.px

Char c
if false do
    skip
else do
    c = '.'
print c
